# twitch-ladder

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .dockerignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: auth.py  channels.py  follows.py  health.py  ladder.py  roles.py  scan_jobs.py  videos.py
apps/api/app/contracts/: __init__.py  ladder.py  video_chatter.py
apps/api/app/core/: config.py  exceptions.py  logging.py  openapi.py  security.py
apps/api/app/db/: session.py
apps/api/app/integrations/twitch/: __init__.py  auth.py  dto.py  exceptions.py  follows.py  graphql.py  helix.py  roles.py  utils.py
apps/api/app/models/: __init__.py  scan_job.py  twitch_user.py  video.py  video_chatter.py
apps/api/app/repositories/: __init__.py  scan_job.py  twitch_user.py  video.py  video_chatter.py
apps/api/app/schemas/: __init__.py  auth.py  channel.py  follow.py  ladder.py  role.py  scan_job.py  video.py
apps/api/app/services/: __init__.py  auth.py  channel.py  follow.py  ladder.py  role.py  scan_job.py  video.py
apps/api/app/shared/: enums.py  languages.py
apps/api/docs/: architecture.md  data-model.md
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260613_0001_initial_ladder_models.py
apps/api/scripts/: start-api.sh
apps/web/: .gitignore  AGENTS.md  Dockerfile  README.md  components.json  (+4 more)
scripts/: generate-api-types.mjs
(+39 files in other folders)
